@@ -6,6 +6,7 @@
  -}
 
 {-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE CPP #-}
 
 module Remote.GitLFS (remote, gen, configKnownUrl) where
 
@@ -39,8 +40,13 @@ import Utility.SshHost
 import Utility.Url
 import Logs.Remote
 import Logs.RemoteState
-import qualified Utility.GitLFS as LFS
 import qualified Git.Config
+
+#ifdef WITH_GIT_LFS
+import qualified Network.GitLFS as LFS
+#else
+import qualified Utility.GitLFS as LFS
+#endif
 
 import Control.Concurrent.STM
 import Data.String
