@@ -3,6 +3,8 @@ git-annex (8.20200618) UNRELEASED; urgency=medium
   * Fix a deadlock that could occur after git-annex got an unlocked
     file, causing the command to hang indefinitely. Known to happen on 
     vfat filesystems, possibly others.
+  * Build with the git-lfs library when available, otherwise use the
+    vendored copy as before.
 
  -- Joey Hess <id@joeyh.name>  Thu, 18 Jun 2020 12:21:14 -0400
 
